Fixed recon tables vertical alignment
Workitems:
#11463 Recon - Seperators are missing for Amount and Quantity values
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C25258

--- a/ShipTech10/app/app-masters/assets/css/custom.css
+++ b/ShipTech10/app/app-masters/assets/css/custom.css
@@ -1053,6 +1053,13 @@ display: flex;
 .ui-grid-cell-contents {
     padding: 10px 10px 9.5px;
 }
+
+.ui-grid-row .ui-grid-cell-contents {
+    display: flex;
+    align-items: center;
+    margin-top: 0 !important;
+}
+
  .parent-header-category.ng-binding.ng-scope {
     background-color: #e3e8e6;
 }
